# learn_c

./: .gitignore  README.md  a.out
advent_of_code/2021/day_1/: main  sonar_sweep.c
advent_of_code/2021/day_2/: dive_1.c  dive_2.c  main  main_1  main_2
advent_of_code/2021/day_3/: binary_diagnostic.c  binary_diagnostic_2.c  main  main_2
advent_of_code/2022/day_1/: CMakeLists.txt  array_update.h  calorie_counting.cpp  calorie_counting_1.c  calorie_counting_2.c  main_1  main_2  main_cpp
advent_of_code/2022/day_10/: .gdb_history  cathode_ray_tube_1.c  cathode_ray_tube_2.c  main_1  main_2  tube.h
advent_of_code/2022/day_2/: CMakeLists.txt  game.cpp  game.h  main_1  main_2  rock_paper_scissors.cpp  rock_paper_scissors_1.c  rock_paper_scissors_2.c
advent_of_code/2022/day_3/: main_1  main_2  rucksack_reorganization_1.c  rucksack_reorganization_2.c
advent_of_code/2022/day_4/: camp_cleanup_1.c  camp_cleanup_2.c  main_1  main_2
advent_of_code/2022/day_5/: boxes_input.txt  main_1  main_2  supply_stacks_1.c  supply_stacks_2.c
advent_of_code/2022/day_6/: main_1  main_1_c  tuning_trouble_1.c
advent_of_code/2022/day_7/: file.txt  main_1  main_2  no_space_left_on_divice_1.c  no_space_left_on_divice_2.c
advent_of_code/2022/day_8/: main_1  main_2  treetop.c  treetop.h  treetop_tree_house_1.c  treetop_tree_house_2.c
code_wars/: bits_battle.c  main  pyramid_arraw.c  square_of_squares.c  sum_of_powers.c  thing.c  vowel_trolls.c
stuff/: a.out  hello_world_name_input_1  hello_world_name_input_1.c  iterate_numer_if_2.c  pyramid_array_3.c
(+8 files in other folders)
